k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  selector:
    app: django
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
